work on correcting alignment .intro
- delete html comments about boxes in .gallery because fixed in a prev commit
- change .intro flex-direction to row so img wasn't pushed to line below .lefttop
- change img to normal div w/ class .imghere and the alt text as text inside it

--- a/styles.css
+++ b/styles.css
@@ -51,16 +51,17 @@ a {
 .intro {
     width: 1000px;
     justify-content: center;
+    flex-direction: row;
 }
 
 .lefttop {
     width: 400px;
-    display: inline-block;
+    margin-right: 50px;
 }
 
-img {
-    /*display: inline-block;*/
+.imghere {
     width: 425px;
+    color: #E5E7EB;
     background-color: #e5e7eb88;
 }
 
